--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import 'tailwindcss/preflight';
+@tailwind utilities;
+@import 'tailwindcss';
+@import 'tw-animate-css';
+
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
