--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+@import 'tailwindcss/preflight';
+@tailwind utilities;
+@import 'tailwindcss';
+@import 'tw-animate-css';
+
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -24,9 +28,6 @@ a:hover {
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
     min-height: 100vh;
 }
 
